--- a/apps/jackett-vpn/config.json
+++ b/apps/jackett-vpn/config.json
@@ -17,7 +17,7 @@
     {
       "name": "WIREGUARD_PRIVATE_KEY",
       "label": "WireGuard Private Key",
-      "env_variable": "WIREGUARD_PRIVATE_KEY",     ←── add this
+      "env_variable": "WIREGUARD_PRIVATE_KEY",
       "type": "password",
       "required": true,
       "masked": true
