--- a/apps/jackett-vpn/docker-compose.yml
+++ b/apps/jackett-vpn/docker-compose.yml
@@ -1,8 +1,9 @@
 version: "3.7"
+
 services:
   gluetun:
     image: qmcgaw/gluetun:latest
-    # removed container_name here so the service name "gluetun" is used
+    # no container_name—use the service name for network_mode
     cap_add:
       - NET_ADMIN
     devices:
@@ -17,6 +18,12 @@ services:
       - TZ=${TZ}
     volumes:
       - ${APP_DATA_DIR}/gluetun:/gluetun
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://127.0.0.1:8888/status || exit 1"]
+      interval: 15s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
     restart: unless-stopped
     networks:
       - tipi_main_network
@@ -36,33 +43,35 @@ services:
       - ${ROOT_FOLDER_HOST}/media/torrents:/media/torrents
     network_mode: "service:gluetun"
     depends_on:
-      - gluetun
+      gluetun:
+        condition: service_healthy
     restart: unless-stopped
     labels:
-      # Main
+      # Traefik & runtipi labels...
       traefik.enable: true
       traefik.http.middlewares.jackett-vpn-web-redirect.redirectscheme.scheme: https
       traefik.http.services.jackett-vpn.loadbalancer.server.port: 9117
-      # Web (insecure)
+
       traefik.http.routers.jackett-vpn-insecure.rule: Host(`${APP_DOMAIN}`)
       traefik.http.routers.jackett-vpn-insecure.entrypoints: web
-      traefik.http.routers.jackett-vpn-insecure.service: jackett-vpn
       traefik.http.routers.jackett-vpn-insecure.middlewares: jackett-vpn-web-redirect
-      # Websecure
+      traefik.http.routers.jackett-vpn-insecure.service: jackett-vpn
+
       traefik.http.routers.jackett-vpn.rule: Host(`${APP_DOMAIN}`)
       traefik.http.routers.jackett-vpn.entrypoints: websecure
       traefik.http.routers.jackett-vpn.service: jackett-vpn
       traefik.http.routers.jackett-vpn.tls.certresolver: myresolver
-      # Local domain (insecure)
+
       traefik.http.routers.jackett-vpn-local-insecure.rule: Host(`jackett-vpn.${LOCAL_DOMAIN}`)
       traefik.http.routers.jackett-vpn-local-insecure.entrypoints: web
-      traefik.http.routers.jackett-vpn-local-insecure.service: jackett-vpn
       traefik.http.routers.jackett-vpn-local-insecure.middlewares: jackett-vpn-web-redirect
-      # Local domain secure
+      traefik.http.routers.jackett-vpn-local-insecure.service: jackett-vpn
+
       traefik.http.routers.jackett-vpn-local.rule: Host(`jackett-vpn.${LOCAL_DOMAIN}`)
       traefik.http.routers.jackett-vpn-local.entrypoints: websecure
       traefik.http.routers.jackett-vpn-local.service: jackett-vpn
       traefik.http.routers.jackett-vpn-local.tls: true
+
       runtipi.managed: true
 
 networks:
