--- a/apps/jackett-vpn/config.json
+++ b/apps/jackett-vpn/config.json
@@ -1,15 +1,15 @@
 {
   "$schema": "../app-info-schema.json",
-  "name": "Jackett with ProtonVPN WireGuard",
+  "name": "Jackett with VPN",
   "available": true,
   "exposable": true,
   "dynamic_config": true,
   "port": 9117,
-  "id": "jackett-wireguard",
+  "id": "jackett-vpn",
   "tipi_version": 82,
   "version": "latest",
-  "description": "Jackett running through ProtonVPN via WireGuard, with kernel-level kill-switch.",
-  "short_desc": "Torrent indexer over ProtonVPN WireGuard",
+  "description": "Jackett running with WireGuard VPN protection and kernel-level kill-switch. Works with ProtonVPN and other WireGuard providers.",
+  "short_desc": "Torrent indexer with VPN protection",
   "categories": ["media", "utilities", "security"],
   "author": "",
   "source": "https://github.com/Jackett/Jackett",
