--- a/apps/jackett-vpn/config.json
+++ b/apps/jackett-vpn/config.json
@@ -11,9 +11,78 @@
   "description": "Jackett running with WireGuard VPN protection and kernel-level kill-switch. Works with ProtonVPN and other WireGuard providers.",
   "short_desc": "Torrent indexer with VPN protection",
   "categories": ["media", "utilities", "security"],
-  "author": "",
+  "author": "dyonr",
   "source": "https://github.com/Jackett/Jackett",
-  "form_fields": [],
+  "form_fields": [
+    {
+      "type": "boolean",
+      "label": "VPN > Enable VPN",
+      "required": true,
+      "default": true,
+      "env_variable": "VPN_ENABLED"
+    },
+    {
+      "label": "VPN > Type",
+      "type": "text",
+      "required": true,
+      "options": [
+        {"label": "WireGuard", "value": "wireguard"},
+        {"label": "OpenVPN", "value": "openvpn"}
+      ],
+      "default": "wireguard",
+      "env_variable": "VPN_TYPE"
+    },
+    {
+      "type": "text",
+      "label": "VPN > Local Network",
+      "placeholder": "192.168.0.0/16,172.16.0.0/12,10.0.0.0/8",
+      "required": true,
+      "default": "192.168.0.0/16,172.16.0.0/12,10.0.0.0/8",
+      "env_variable": "LAN_NETWORK"
+    },
+    {
+      "type": "text",
+      "label": "VPN > Username (OpenVPN only)",
+      "placeholder": "username",
+      "env_variable": "VPN_USERNAME"
+    },
+    {
+      "type": "password",
+      "label": "VPN > Password (OpenVPN only)",
+      "placeholder": "password",
+      "env_variable": "VPN_PASSWORD"
+    },
+    {
+      "type": "text",
+      "label": "VPN > DNS Servers",
+      "placeholder": "1.1.1.1,1.0.0.1",
+      "default": "1.1.1.1,1.0.0.1",
+      "env_variable": "NAME_SERVERS"
+    },
+    {
+      "type": "number",
+      "label": "Container > UserID (PUID)",
+      "placeholder": "1000",
+      "default": "1000",
+      "env_variable": "PUID"
+    },
+    {
+      "type": "number",
+      "label": "Container > GroupID (PGID)",
+      "placeholder": "1000",
+      "default": "1000",
+      "env_variable": "PGID"
+    },
+    {
+      "type": "text",
+      "label": "Container > UMASK",
+      "placeholder": "002",
+      "default": "002",
+      "env_variable": "UMASK"
+    }
+  ],
   "supported_architectures": ["arm64", "amd64"],
-  "force_pull": true
+  "force_pull": true,
+  "created_at": 1724134938430,
+  "updated_at": 1724134938430
 }
