--- a/apps/jackett-vpn/config.json
+++ b/apps/jackett-vpn/config.json
@@ -1,88 +1,33 @@
 {
   "$schema": "../app-info-schema.json",
-  "name": "Jackett with VPN",
+  "name": "Jackett (VPN)",
   "available": true,
   "exposable": true,
   "dynamic_config": true,
   "port": 9117,
   "id": "jackett-vpn",
-  "tipi_version": 82,
+  "tipi_version": 9,
   "version": "latest",
-  "description": "Jackett running with WireGuard VPN protection and kernel-level kill-switch. Works with ProtonVPN and other WireGuard providers.",
-  "short_desc": "Torrent indexer with VPN protection",
-  "categories": ["media", "utilities", "security"],
+  "categories": ["indexers", "security"],
+  "description": "Jackett server running behind WireGuard or OpenVPN with killswitch.",
+  "short_desc": "Jackett with VPN support.",
   "author": "dyonr",
-  "source": "https://github.com/Jackett/Jackett",
+  "source": "https://github.com/dyonr/jackettvpn",
   "form_fields": [
-    {
-      "type": "boolean",
-      "label": "VPN > Enable VPN",
-      "required": true,
-      "default": true,
-      "env_variable": "VPN_ENABLED"
-    },
-    {
-      "label": "VPN > Type",
-      "type": "text",
-      "required": true,
-      "options": [
-        {"label": "WireGuard", "value": "wireguard"},
-        {"label": "OpenVPN", "value": "openvpn"}
-      ],
-      "default": "wireguard",
-      "env_variable": "VPN_TYPE"
-    },
-    {
-      "type": "text",
-      "label": "VPN > Local Network",
-      "placeholder": "192.168.0.0/16,172.16.0.0/12,10.0.0.0/8",
-      "required": true,
-      "default": "192.168.0.0/16,172.16.0.0/12,10.0.0.0/8",
-      "env_variable": "LAN_NETWORK"
-    },
-    {
-      "type": "text",
-      "label": "VPN > Username (OpenVPN only)",
-      "placeholder": "username",
-      "env_variable": "VPN_USERNAME"
-    },
-    {
-      "type": "password",
-      "label": "VPN > Password (OpenVPN only)",
-      "placeholder": "password",
-      "env_variable": "VPN_PASSWORD"
-    },
-    {
-      "type": "text",
-      "label": "VPN > DNS Servers",
-      "placeholder": "1.1.1.1,1.0.0.1",
-      "default": "1.1.1.1,1.0.0.1",
-      "env_variable": "NAME_SERVERS"
-    },
-    {
-      "type": "number",
-      "label": "Container > UserID (PUID)",
-      "placeholder": "1000",
-      "default": "1000",
-      "env_variable": "PUID"
-    },
-    {
-      "type": "number",
-      "label": "Container > GroupID (PGID)",
-      "placeholder": "1000",
-      "default": "1000",
-      "env_variable": "PGID"
-    },
-    {
-      "type": "text",
-      "label": "Container > UMASK",
-      "placeholder": "002",
-      "default": "002",
-      "env_variable": "UMASK"
-    }
+    { "type": "boolean", "label": "VPN > Enable VPN", "env_variable": "VPN_ENABLED" },
+    { "type": "text", "label": "VPN > Type (wireguard/openvpn)", "env_variable": "VPN_TYPE" },
+    { "type": "password", "label": "VPN > Username", "env_variable": "VPN_USERNAME" },
+    { "type": "password", "label": "VPN > Password", "env_variable": "VPN_PASSWORD" },
+    { "type": "password", "label": "Jackett > WebUI Password", "required": true, "env_variable": "WEBUI_PASSWORD" },
+    { "type": "text", "label": "Network > LAN Networks (CIDR)", "env_variable": "LAN_NETWORK" },
+    { "type": "text", "label": "DNS > Name Servers (comma-separated)", "env_variable": "NAME_SERVERS" },
+    { "type": "number", "label": "Container > PUID", "env_variable": "PUID" },
+    { "type": "number", "label": "Container > PGID", "env_variable": "PGID" },
+    { "type": "number", "label": "Umask", "env_variable": "UMASK" },
+    { "type": "number", "label": "Jackett > WebUI Port", "env_variable": "WEBUI_PORT" },
+    { "type": "text", "label": "Healthcheck > Host", "env_variable": "HEALTH_CHECK_HOST" }
   ],
   "supported_architectures": ["arm64", "amd64"],
-  "force_pull": true,
-  "created_at": 1724134938430,
-  "updated_at": 1724134938430
+  "created_at": 1742090000000,
+  "updated_at": 1742090000000
 }
