--- a/apps/jackett-vpn/config.json
+++ b/apps/jackett-vpn/config.json
@@ -1,33 +1,35 @@
 {
   "$schema": "../app-info-schema.json",
   "name": "Jackett (VPN)",
+  "id": "jackettvpn",
   "available": true,
   "exposable": true,
   "dynamic_config": true,
   "port": 9117,
-  "id": "jackett-vpn",
   "tipi_version": 9,
-  "version": "latest",
-  "categories": ["indexers", "security"],
-  "description": "Jackett server running behind WireGuard or OpenVPN with killswitch.",
-  "short_desc": "Jackett with VPN support.",
+  "version": "0.20.5138",
+  "categories": ["network","utilities"],
+  "short_desc": "Jackett search aggregator with VPN support.",
   "author": "dyonr",
   "source": "https://github.com/dyonr/jackettvpn",
   "form_fields": [
-    { "type": "boolean", "label": "VPN > Enable VPN", "env_variable": "VPN_ENABLED" },
-    { "type": "text", "label": "VPN > Type (wireguard/openvpn)", "env_variable": "VPN_TYPE" },
-    { "type": "password", "label": "VPN > Username", "env_variable": "VPN_USERNAME" },
-    { "type": "password", "label": "VPN > Password", "env_variable": "VPN_PASSWORD" },
-    { "type": "password", "label": "Jackett > WebUI Password", "required": true, "env_variable": "WEBUI_PASSWORD" },
-    { "type": "text", "label": "Network > LAN Networks (CIDR)", "env_variable": "LAN_NETWORK" },
-    { "type": "text", "label": "DNS > Name Servers (comma-separated)", "env_variable": "NAME_SERVERS" },
-    { "type": "number", "label": "Container > PUID", "env_variable": "PUID" },
-    { "type": "number", "label": "Container > PGID", "env_variable": "PGID" },
-    { "type": "number", "label": "Umask", "env_variable": "UMASK" },
-    { "type": "number", "label": "Jackett > WebUI Port", "env_variable": "WEBUI_PORT" },
-    { "type": "text", "label": "Healthcheck > Host", "env_variable": "HEALTH_CHECK_HOST" }
+    {"type":"boolean","label":"Enable VPN","env_variable":"VPN_ENABLED","default":true},
+    {"type":"text","label":"VPN Type","env_variable":"VPN_TYPE","required":true,
+      "options":[{"label":"WireGuard","value":"wireguard"},{"label":"OpenVPN","value":"openvpn"}]},
+    {"type":"text","label":"VPN Username","env_variable":"VPN_USERNAME"},
+    {"type":"password","label":"VPN Password","env_variable":"VPN_PASSWORD"},
+    {"type":"password","label":"Jackett WebUI Password","env_variable":"WEBUI_PASSWORD","required":true},
+    {"type":"text","label":"Local Network CIDRs","env_variable":"LAN_NETWORK","required":true,
+      "placeholder":"192.168.0.0/24,10.0.0.0/16"},
+    {"type":"text","label":"Name Servers","env_variable":"NAME_SERVERS","placeholder":"1.1.1.1,1.0.0.1"},
+    {"type":"number","label":"PUID","env_variable":"PUID","default":1000},
+    {"type":"number","label":"PGID","env_variable":"PGID","default":1000},
+    {"type":"text","label":"UMASK","env_variable":"UMASK","default":"002"},
+    {"type":"number","label":"Healthcheck Interval (s)","env_variable":"HEALTH_CHECK_INTERVAL","default":300},
+    {"type":"boolean","label":"Healthcheck Silent","env_variable":"HEALTH_CHECK_SILENT","default":true},
+    {"type":"text","label":"Additional Ports","env_variable":"ADDITIONAL_PORTS","placeholder":"1234,8112"}
   ],
-  "supported_architectures": ["arm64", "amd64"],
-  "created_at": 1742090000000,
-  "updated_at": 1742090000000
+  "supported_architectures": ["arm64","amd64"],
+  "created_at": 1700000000000,
+  "updated_at": 1710000000000
 }
