--- a/apps/jackett-vpn/docker-compose.yml
+++ b/apps/jackett-vpn/docker-compose.yml
@@ -1,14 +1,19 @@
+version: "3.9"
 services:
-  jackett-vpn:
-    image: dyonr/jackettvpn:latest
-    container_name: jackett-vpn
+  jackettvpn:
+    container_name: jackettvpn
+    image: dyonr/jackettvpn:0.20.5138
+    restart: unless-stopped
     privileged: true
     cap_add:
       - NET_ADMIN
     devices:
       - /dev/net/tun
-    dns:
-      - ${NAME_SERVERS}
+    ports:
+      - "${APP_PORT-9117}:9117"
+    volumes:
+      - ${APP_DATA_DIR}/data/config:/config
+      - ${APP_DATA_DIR}/data/blackhole:/blackhole
     environment:
       - VPN_ENABLED=${VPN_ENABLED-yes}
       - VPN_TYPE=${VPN_TYPE-openvpn}
@@ -20,25 +25,27 @@ services:
       - PUID=${PUID-1000}
       - PGID=${PGID-1000}
       - UMASK=${UMASK-002}
-      - WEBUI_PORT=${WEBUI_PORT-9117}
-      - HEALTH_CHECK_HOST=${HEALTH_CHECK_HOST-1.1.1.1}
       - HEALTH_CHECK_INTERVAL=${HEALTH_CHECK_INTERVAL-300}
       - HEALTH_CHECK_SILENT=${HEALTH_CHECK_SILENT-1}
       - ADDITIONAL_PORTS=${ADDITIONAL_PORTS}
-    volumes:
-      - ${APP_DATA_DIR}/config:/config
-      - ${ROOT_FOLDER_HOST}/blackhole:/blackhole
-    ports:
-      - "${APP_PORT}:9117"
-    restart: unless-stopped
     networks:
       - tipi_main_network
     labels:
       traefik.enable: true
-      traefik.http.routers.jackett.rule: Host(`${APP_DOMAIN}`)
-      traefik.http.services.jackett.loadbalancer.server.port: 9117
+      traefik.http.middlewares.jackettvpn-web-redirect.redirectscheme.scheme: https
+      traefik.http.services.jackettvpn.loadbalancer.server.port: 9117
+      traefik.http.routers.jackettvpn-insecure.rule: Host(`${APP_DOMAIN}`)
+      traefik.http.routers.jackettvpn-insecure.entrypoints: web
+      traefik.http.routers.jackettvpn-insecure.middlewares: jackettvpn-web-redirect
+      traefik.http.routers.jackettvpn.rule: Host(`${APP_DOMAIN}`)
+      traefik.http.routers.jackettvpn.entrypoints: websecure
+      traefik.http.routers.jackettvpn.tls.certresolver: myresolver
+      traefik.http.routers.jackettvpn-local-insecure.rule: Host(`jackettvpn.${LOCAL_DOMAIN}`)
+      traefik.http.routers.jackettvpn-local-insecure.entrypoints: web
+      traefik.http.routers.jackettvpn-local.rule: Host(`jackettvpn.${LOCAL_DOMAIN}`)
+      traefik.http.routers.jackettvpn-local.entrypoints: websecure
+      traefik.http.routers.jackettvpn-local.tls: true
       runtipi.managed: true
-
 networks:
   tipi_main_network:
     external: true
