--- a/apps/jackett-vpn/docker-compose.yml
+++ b/apps/jackett-vpn/docker-compose.yml
@@ -1,51 +1,70 @@
-version: "3.9"
 services:
-  jackettvpn:
-    container_name: jackettvpn
-    image: dyonr/jackettvpn:latest
-    restart: unless-stopped
-    privileged: true
+  gluetun:
+    image: qmcgaw/gluetun:latest
+    container_name: gluetun
     cap_add:
       - NET_ADMIN
-    devices:
+    devices: 
       - /dev/net/tun
-    ports:
-      - "${APP_PORT-9117}:9117"
-    volumes:
-      - ${APP_DATA_DIR}/data/config:/config
-      - ${APP_DATA_DIR}/data/blackhole:/blackhole
     environment:
-      - VPN_ENABLED=${VPN_ENABLED-yes}
-      - VPN_TYPE=${VPN_TYPE-openvpn}
-      - VPN_USERNAME=${VPN_USERNAME}
-      - VPN_PASSWORD=${VPN_PASSWORD}
-      - WEBUI_PASSWORD=${WEBUI_PASSWORD}
-      - LAN_NETWORK=${LAN_NETWORK}
-      - NAME_SERVERS=${NAME_SERVERS-1.1.1.1,1.0.0.1}
-      - PUID=${PUID-1000}
-      - PGID=${PGID-1000}
-      - UMASK=${UMASK-002}
-      - HEALTH_CHECK_INTERVAL=${HEALTH_CHECK_INTERVAL-300}
-      - HEALTH_CHECK_SILENT=${HEALTH_CHECK_SILENT-1}
-      - ADDITIONAL_PORTS=${ADDITIONAL_PORTS}
+      - VPN_SERVICE_PROVIDER=${JACKETT_VPN_SERVICE_PROVIDER}
+      - VPN_TYPE=${JACKETT_VPN_TYPE}
+      - WIREGUARD_PRIVATE_KEY=${JACKETT_WIREGUARD_PRIVATE_KEY}
+      - SERVER_COUNTRIES=${JACKETT_SERVER_COUNTRIES-Netherlands,United States}
+      - FREE_ONLY=${JACKETT_FREE_ONLY-on}
+      - FIREWALL=${JACKETT_FIREWALL-on}
+      - FIREWALL_VPN_INPUT_PORTS=${APP_PORT}
+      - FIREWALL_OUTBOUND_SUBNETS=
+      - DNS=${JACKETT_DNS-on}
+      - DOT=on
+    volumes:
+      - ${APP_DATA_DIR}/data/gluetun:/gluetun
     networks:
       - tipi_main_network
+    logging:
+      driver: json-file
+      options:
+        max-size: 10m
+    restart: unless-stopped
+
+  jackett:
+    image: linuxserver/jackett:latest
+    container_name: jackett
+    network_mode: service:gluetun
+    environment:
+      - PUID=${JACKETT_PUID-1000}
+      - PGID=${JACKETT_PGID-1000}
+      - TZ=${TZ-Europe/London}
+    volumes:
+      - ${APP_DATA_DIR}/data/config:/config
+      - ${APP_DATA_DIR}/data/downloads:/downloads
+    depends_on:
+      - gluetun
+    restart: unless-stopped
     labels:
+      # Main
       traefik.enable: true
-      traefik.http.middlewares.jackettvpn-web-redirect.redirectscheme.scheme: https
-      traefik.http.services.jackettvpn.loadbalancer.server.port: 9117
-      traefik.http.routers.jackettvpn-insecure.rule: Host(`${APP_DOMAIN}`)
-      traefik.http.routers.jackettvpn-insecure.entrypoints: web
-      traefik.http.routers.jackettvpn-insecure.middlewares: jackettvpn-web-redirect
-      traefik.http.routers.jackettvpn.rule: Host(`${APP_DOMAIN}`)
-      traefik.http.routers.jackettvpn.entrypoints: websecure
-      traefik.http.routers.jackettvpn.tls.certresolver: myresolver
-      traefik.http.routers.jackettvpn-local-insecure.rule: Host(`jackettvpn.${LOCAL_DOMAIN}`)
-      traefik.http.routers.jackettvpn-local-insecure.entrypoints: web
-      traefik.http.routers.jackettvpn-local.rule: Host(`jackettvpn.${LOCAL_DOMAIN}`)
-      traefik.http.routers.jackettvpn-local.entrypoints: websecure
-      traefik.http.routers.jackettvpn-local.tls: true
+      traefik.http.middlewares.jackett-web-redirect.redirectscheme.scheme: https
+      traefik.http.services.jackett.loadbalancer.server.scheme: http
+      traefik.http.services.jackett.loadbalancer.server.port: 9117
+      # Web
+      traefik.http.routers.jackett-insecure.rule: Host(`${APP_DOMAIN}`)
+      traefik.http.routers.jackett-insecure.entrypoints: web
+      traefik.http.routers.jackett-insecure.service: jackett
+      traefik.http.routers.jackett-insecure.middlewares: jackett-web-redirect
+      # Websecure
+      traefik.http.routers.jackett.rule: Host(`${APP_DOMAIN}`)
+      traefik.http.routers.jackett.entrypoints: websecure
+      traefik.http.routers.jackett.service: jackett
+      traefik.http.routers.jackett.tls.certresolver: myresolver
+      # Local domain
+      traefik.http.routers.jackett-local-insecure.rule: Host(`jackett.${LOCAL_DOMAIN}`)
+      traefik.http.routers.jackett-local-insecure.entrypoints: web
+      traefik.http.routers.jackett-local-insecure.service: jackett
+      traefik.http.routers.jackett-local-insecure.middlewares: jackett-web-redirect
+      # Local domain secure
+      traefik.http.routers.jackett-local.rule: Host(`jackett.${LOCAL_DOMAIN}`)
+      traefik.http.routers.jackett-local.entrypoints: websecure
+      traefik.http.routers.jackett-local.service: jackett
+      traefik.http.routers.jackett-local.tls: true
       runtipi.managed: true
-networks:
-  tipi_main_network:
-    external: true
