--- a/apps/jackett-vpn/docker-compose.yml
+++ b/apps/jackett-vpn/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - PUID=${JACKETT_PUID-1000}
       - PGID=${JACKETT_PGID-1000}
       - TZ=${TZ-Europe/London}
+      - RUN_OPTS=--Port=9118
     volumes:
       - ${APP_DATA_DIR}/data/config:/config
       - ${APP_DATA_DIR}/data/downloads:/downloads
