--- a/apps/jackett-vpn/docker-compose.yml
+++ b/apps/jackett-vpn/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - VPN_SERVICE_PROVIDER=${JACKETT_VPN_SERVICE_PROVIDER}
       - VPN_TYPE=${JACKETT_VPN_TYPE}
       - WIREGUARD_PRIVATE_KEY=${JACKETT_WIREGUARD_PRIVATE_KEY}
-      - SERVER_COUNTRIES=${JACKETT_SERVER_COUNTRIES-Netherlands,United States}
+      - SERVER_COUNTRIES=${JACKETT_SERVER_COUNTRIES-Netherlands,United States,Japan}
       - FREE_ONLY=${JACKETT_FREE_ONLY-on}
       - FIREWALL=${JACKETT_FIREWALL-on}
       - FIREWALL_VPN_INPUT_PORTS=9117
