--- a/apps/jackett-vpn/docker-compose.yml
+++ b/apps/jackett-vpn/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       - FIREWALL_OUTBOUND_SUBNETS=
       - DNS=${JACKETT_DNS-on}
       - DOT=on
+      - DOT_FILTERING_BLOCK_ADS=${JACKETT_BLOCK_ADS-off}
+      - DOT_FILTERING_BLOCK_SURVEILLANCE=${JACKETT_BLOCK_SURVEILLANCE-off}
     volumes:
       - ${APP_DATA_DIR}/data/gluetun:/gluetun
     networks:
@@ -55,7 +57,7 @@ services:
       traefik.http.routers.jackett-local.service: jackett
       traefik.http.routers.jackett-local.tls: true
       runtipi.managed: true
-
+ 
   jackett:
     image: linuxserver/jackett:latest
     container_name: jackett
