--- a/apps/jackett-vpn/docker-compose.yml
+++ b/apps/jackett-vpn/docker-compose.yml
@@ -17,8 +17,8 @@ services:
       - FIREWALL_OUTBOUND_SUBNETS=
       - DNS=${JACKETT_DNS-on}
       - DOT=on
-      - DOT_FILTERING_BLOCK_ADS=${JACKETT_BLOCK_ADS-off}
-      - DOT_FILTERING_BLOCK_SURVEILLANCE=${JACKETT_BLOCK_SURVEILLANCE-off}
+      - DOT_FILTERING_BLOCK_ADS=${JACKETT_BLOCK_ADS-on}
+      - DOT_FILTERING_BLOCK_SURVEILLANCE=${JACKETT_BLOCK_SURVEILLANCE-on}
     volumes:
       - ${APP_DATA_DIR}/data/gluetun:/gluetun
     networks:
